Wed Nov 21 05:02:18 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Wed Nov 21 05:00:51 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* omindex.cc: Fix omindex not to segfault when -F option without a ':'
	  is passed.

Sat Nov 10 08:08:20 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sat Oct 13 12:24:59 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* Makefile.am,omindex.cc: Replace shell_protect() with
	  append_filename_argument() from common/append_filename_arg.h.
	  Extracting text using external filters now works for filenames
	  containing a newline character.
	* common/: Update svn:externals to latest version of xapian-core
	  on 1.2 branch to get common/append_filename_arg.h.

Wed Jul 18 10:51:39 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* urldecode.h: Fix to decode escaped character at the end of the
	  string.
	* urlenctest.cc: Add regression testcase.

Wed Jun 27 12:15:37 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.12.

Tue Jun 26 12:06:15 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.11.

Tue Jun 26 12:04:16 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Set link_all_deplibs_CXX=no on solaris, like we
	  already do for xapian-core.

Tue Jun 26 08:48:58 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Fri Jun 22 12:16:30 GMT 2012  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* xlsxparse.cc: Check for "uniquecount" parameter, not "unqiueCount" as
	  we normalise parameter names to lower case.
	* omindex.cc: unzip extracts files in the order they are in the
	  archive, not the order they are on the command line, so call unzip
	  twice when the order of extraction matters.
	* Makefile.am,omindex.cc,opendocparse.cc,opendocparse.h,xmlparse.cc: