@@ -408,7 +408,7 @@ index_file(const string &file, const string &url, DirectoryIterator & d,
 		return;
 	    }
 	} else if (mimetype == "text/html") {
-	    string text = d.file_to_string();
+	    const string & text = d.file_to_string();
 	    MyHtmlParser p;
 	    if (ignore_exclusions) p.ignore_metarobots();
 	    try {
@@ -608,7 +608,7 @@ index_file(const string &file, const string &url, DirectoryIterator & d,
 	} else if (mimetype == "application/x-abiword") {
 	    // FIXME: Implement support for metadata.
 	    XmlParser xmlparser;
-	    string text = d.file_to_string();
+	    const string & text = d.file_to_string();
 	    xmlparser.parse_html(text);
 	    dump = xmlparser.dump;
 	    md5_string(text, md5);
@@ -737,7 +737,9 @@ index_file(const string &file, const string &url, DirectoryIterator & d,
 	    author = p.author;
 	} else if (mimetype == "image/svg+xml") {
 	    SvgParser svgparser;
-	    svgparser.parse_html(d.file_to_string());
+	    const string & text = d.file_to_string();
+	    md5_string(text, md5);
+	    svgparser.parse_html(text);
 	    dump = svgparser.dump;
 	    title = svgparser.title;
 	    keywords = svgparser.keywords;
@@ -765,7 +767,9 @@ index_file(const string &file, const string &url, DirectoryIterator & d,
 	    }
 	} else if (mimetype == "application/atom+xml") {
 	    AtomParser atomparser;
-	    atomparser.parse_html(d.file_to_string());
+	    const string & text = d.file_to_string();
+	    md5_string(text, md5);
+	    atomparser.parse_html(text);
 	    dump = atomparser.dump;
 	    title = atomparser.title;
 	    keywords = atomparser.keywords;
